# cpp_project_template

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml  format.yml  on_pull_request.yml
include/: mymath.hpp
pkg/: CMakeLists.txt
scripts/: clang_format.cmake  code_format.cmake  install_tools.sh  install_tools_apt.sh  install_tools_brew.sh
src/: CMakeLists.txt
src/mymath/: CMakeLists.txt  mymath.cpp
src/mymath/include/public/: mymath.hpp
src/project_lib/: CMakeLists.txt  math.cpp
src/project_lib/include/public/project_lib/: math.hpp
src/project_test/: CMakeLists.txt  math_test.cpp
test/: CMakeLists.txt
test/mymath_test/: mymath_test.cpp
